Fixed issue with image and added letter spacing back.

--- a/static-app/assets/css/styles.css
+++ b/static-app/assets/css/styles.css
@@ -6931,6 +6931,7 @@ ul.rrssb-buttons li {
 	color: gray;
 	font-kerning: normal;
 	line-height: 1.8em;
+    letter-spacing: .5px;
 }
 .services-copy-link {
 	max-width: 828px;
